--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,244 +1,422 @@
-html, body {
-	margin:0;
-	padding:0;
-	height:100%;
-	font-size:18px;
-	line-height: 150%;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
-	color:#777777;
-	background: url('https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/asanoha-400px.png?raw=true');
+body {
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  color: #777;
+  line-height: 34px;
+  background: url("../images/asanoha-400px.png");
 }
 
-#banner {
-	background-color:#ffffff;
-	border-bottom:3px solid #cccccc;
-	width:100%;
-	height:90px;
-	position:fixed;
-	z-index: 3;
+* {
+  box-sizing: border-box;
 }
 
-header {
-	background-color: #4aaaa5;
-	width:270px;
-	height:90px;
-	position:fixed;
-	left:65px;
-	line-height:90px;
+
+/*general*/
+
+.container {
+  clear: both;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
 }
 
-#menu {
-	width:auto;
-	height:90px;
-	position:fixed;
-	right:240px;
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
 }
 
-a {
-	color:inherit;
-	text-decoration: none;
+p:last-child {
+  margin-bottom: 0;
 }
 
-.nav {
-	padding-right: 16px;
-	border-right:1px solid #dddddd;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    line-height: 90px;
-}
-
-li {
-    display: inline-block;
-    padding-right: 16px;
-    vertical-align: middle;
+h1,
+h2,
+h3 {
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: #4aaaa5;
+  font-weight: 700;
 }
 
 h1 {
-	color:#ffffff;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-size:28px;
-	font-weight: bold;
-	text-align: center;
-	vertical-align: middle;
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
 }
 
-h2 {
-	color: #4aaaa5;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-size:24px;
-	font-weight: bold;
-	vertical-align:middle;
+h2,
+h3 {
+  font-size: 22px;
 }
 
-.container {
-	background-color:#ffffff;
-	border:1px solid #dddddd;
-	width:650px;
-	height:600px;
-	position:absolute;
-	left:65px;
-	top:130px;
-	z-index:1;
-	margin-bottom:200px;
+
+/*header*/
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  margin: 0 0 30px;
+  overflow: auto;
+  width: 100%;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-.section-head {
-	background-color:#ffffff;
-	height:90px;
-	line-height: 90px;
-	z-index:2;
-	}
-
-#about-head, #contact-head, #portfolio-head {
-	border-bottom:4px solid #dddddd;
-	width:590px;
-	position:absolute;
-	left:30px;
-	z-index:3;
+#logo {
+  width: 280px;
+  height: 90px;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  text-align: center;
+  line-height: 90px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 30px;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-#about-me, form {
-	background-color:#ffffff;
-	width:590px;
-	position:absolute;
-	top:130px;
-	left:35px;
-	z-index:2;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-img {
-	float:left;
-	margin:10px;
+nav a {
+  display: inline-block;
+  margin-left: 15px;
+  padding-left: 15px;
+  color: #999;
+  text-decoration: none;
+  line-height: 18px;
+  border-left: 1px solid #efefef;
 }
 
-input, textarea {
-	padding:5px;
-	opacity:0.5;
-	width:590px;
+nav a:first-child {
+  border-left: 0 none;
+}
+
+
+/*footer*/
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  color: #fff;
+  color: #ccc;
+  font-size: 12px;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+}
+
+
+/*sidebar*/
+
+.sidebar {
+  padding: 30px;
+  width: 100%;
+  max-width: 270px;
+  float: right;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+
+/*main*/
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  padding: 30px;
+  margin: 0 0 40px 0;
+  width: 100%;
+  max-width: 650px;
+  float: left;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+
+/*portfolio page*/
+
+.work {
+  position: relative;
+  width: 274px;
+  overflow: auto;
+  float: left;
+  margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: .8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  margin-bottom: 0;
+  padding: 15px;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  line-height: 30px;
+  font-weight: 300;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+  float: left;
+}
+
+
+/*contact page*/
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
 }
 
 textarea {
-	height:200px;
+  height: 200px;
 }
 
-#contact-div {
-	height:605px;
+input[type=submit] {
+  padding: 10px 30px;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
 
-#portfolio-div {
-	height:860px;
+
+
+@media screen and (max-width: 980px) {
+	/*header*/
+
+  #logo {
+    margin-left: 115px;
+  }
+
+  nav {
+    margin-right: 115px;
+  }
+
+
+  /*sidebar*/
+
+  .sidebar {  
+    margin-right: 115px;
+  }
+
+  .social {
+    margin-left: 4px;  
+  }
+
+  .social:last-child {
+    margin-right: 0;
+  }
+
+
+  /*main*/
+
+  .main-section {
+    max-width: 420px;
+    margin-left: 115px;
+  }
+
+  .auth-image {
+    width: 357px;
+    clear: both;
+    margin-bottom: 20px;
+  }
+
+
+  /*portfolio page*/
+
+  .work {
+    width: 357px;
+    margin: 20px 0 10px;
+  }
+
+  .work:nth-child(even) {
+    margin-right: 30px;
+  }
 }
 
-#submit {
-	background-color:#4aaaa5;
-	font-size:18px;
-	line-height: 150%;
-	color:#ffffff;
-	opacity:100;
-	border:1px solid #dddddd;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	width:115px;
-	height:40px;
-	position:relative;
-	top:20px;
+
+@media screen and (max-width: 768px) {
+
+  /*header*/
+
+  #logo {
+    margin-left: 20px;
+  }
+
+  nav {
+   margin-right: 20px;
+  }
+
+
+  /*sidebar*/
+
+  .sidebar {  
+    max-width: 698px;
+    clear: both;
+    margin: 0 20px 30px 20px;
+  }
+
+
+  /*main*/
+
+  .main-section {
+    max-width: 698px;
+    clear: both;
+    margin: 0 20px 30px 20px;
+  }
+
+
+  /*portfolio page*/
+
+  .work {
+    width: 302px;
+    margin: 20px 0 10px;
+  }
+
+  .work:nth-child(even) {
+    margin-right: 30px;
+  }
 }
 
-.img-div {
-	height:205px;
-	width:275px;
-	position:relative;
-	z-index:-2;
-	float:left;
-	margin-bottom:60px;
-	margin-right:40px;
-	top:55px;
-	left:10px;
-	line-height:60px;
-}	
 
-.img-hold {
-	height:205px;
-	width:275px;
-	position:relative;
-	z-index:-1;
-	float:left;
-	margin-bottom:60px;
-	margin-right:40px;
-	top:55px;
-	left:10px;
-}	
 
-h3 {
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-size:24px;
-	text-align: center;
-	vertical-align: middle;
-	background-color:#4aaaa5;
-	color:#ffffff;
-	width:275px;
-	height:60px;
-	position:absolute;
-	z-index:10;
-	float:left;
-	top:200px;
-	left:20px;
-}
+/***640 layout***/
 
-.container2 {
-	background-color:#ffffff;
-	border:1px solid #dddddd;
-	width:270px;
-	height:200px;
-	position:absolute;
-	top:130px;
-	right:240px;
-	z-index:1;
-}
+@media screen and (max-width: 640px) {
+	
+  /*general*/
 
-#connect-head {
-	border-bottom:3px solid #dddddd;
-	width:210px;
-	position:absolute;
-	left: 30px;
-	z-index:2;
-}
+  .container {
+      clear: both;
+    }
 
-#connect {
-	background-color:#ffffff;
-	position:absolute;
-	top:102px;
-	left:20px;
-	height:60px;
-	z-index: 2;
-}
 
-#GitHub, #LinkedIn, #Stackoverflow {
-	height:60px;
-	width:60px;
-}
+  /*header*/
 
-#bio-image {
-	height:200px;
-	width:200px;
-}
+  #logo, nav {
+    width: 100%;
+  }
 
-footer {
-	background-color:#666666;
-	border-top:8px solid #4aaaa5;
-	width:100%;
-	height:95px;
-	text-align:center;
-	clear:both;
-	position:fixed;
-	bottom:0%;
-	z-index:1;
-	line-height:90px;
-}
+  #logo {
+    margin-left: 0;
+  }
 
-.footer {
-	vertical-align: middle;
+  nav {
+    clear: both;
+    margin-top: 15px;
+    height: 45px;
+  }
+
+  nav a {
+    margin-left: 55px;
+    padding-left: 55px;
+  }
+
+
+  /*footer*/
+
+  footer {
+      position: static;
+    }
+
+
+  /*sidebar*/
+
+  .sidebar {  
+    max-width: 580px;
+    clear: both;
+    margin: 0 15px 30px 15px;
+  }
+
+
+  /*main*/
+
+  #main-container {
+    padding-top: 170px;
+  }
+
+  .main-section {
+    max-width: 580px;
+    clear: both;
+    margin: 15px 15px 30px 15px;
+  }
+
+  .auth-image {
+    margin-bottom: 0;
+  }
+
+
+  /*portfolio page*/
+
+  .work {
+    clear: both;
+    width: 510px;
+    margin: 15px 5px 20px;
+  }
 }
